@@ -67,7 +67,8 @@ EXULT_FLX_OBJECTS = \
 	data/play_1st_scene.shp	\
 	data/extras.shp \
 	data/midi_conversion.shp \
-	data/sfx_conversion.shp
+	data/sfx_conversion.shp \
+	data/palette_fades.shp
 
 $(EXEC) : $(OBJS) data/exult.flx
 	$(CXX) $(LFLAGS) -o $@ $(OBJS) $(LIBS)
