@@ -21,7 +21,8 @@ EXULT_FLX_OBJECTS = \
 	play_1st_scene.shp	\
 	extras.shp		\
 	midi_conversion.shp	\
-	sfx_conversion.shp
+	sfx_conversion.shp	\
+	palette_fades.shp
 
 flexdir = $(datadir)/exult
 
